# pstruct

./: Cargo.toml  LICENSE  todo.org
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: lib.rs  parser.rs  renderer.rs  struct.pest  types.rs
examples/rust/: Cargo.toml  build.rs
examples/rust/src/: main.rs  test.rs  test.zs
generator/go/: Cargo.toml
generator/go/src/: lib.rs
generator/rust/: Cargo.toml
generator/rust/src/: lib.rs
generator/rust/tests/: mod.rs
pst/: Cargo.toml
pst/src/: main.rs
pstruct/: Cargo.toml
pstruct/src/: lib.rs  parser.rs  struct.pest  types.rs
pstruct/tests/: mod.rs
runtime/: go.mod  stream.go
runtime/go/: go.mod  stream.go
runtime/rust/: Cargo.toml
runtime/rust/src/: lib.rs
specs/: ak.zs  simple.zs  tlv.zs
src/: main.rs  parser.rs  renderer.rs  struct.pest  types.rs
template/go/: file.tera  struct.tera  types.tera
