[package]
name = "pstruct_rust_example"
version = "0.3.0"
authors = ["wwared"]
edition = "2018"
publish = false

[dependencies]
pstruct_rs = { path = "../../runtime/rust" }

[build-dependencies]
# only necessary if you want to call it from build.rs; alternatively just call the binary instead
# see build.rs for more information
# pstruct = { path = "../../pstruct" }
# pstruct_rust = { path = "../../generator/rust" }
